[package]
name = "certbot-dns01-hook"
version = "0.1.1"
description="Hook for certbot to serve the DNS01 challenge secret TXT record"
license="MIT"
readme="Readme.md"
repository="https://github.com/therealfrauholle/certbot-dns01-hook"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100" }
hickory-server = "0.25.2"
tokio = { version = "1.48", features = ["full"] }
tracing-subscriber = "0.3.20"
syslog-tracing = "0.3.1"
nix = {version = "0.30.1", features =["signal", "process", "fs"]}
tracing = "0.1.43"
tracing-panic = "0.1.2"
toml = "0.9.8"
serde = "1.0"
clap = { version = "4.5.51", features = ["derive"] }
ctrlc = "3.5.1"
